Ignore visual paradigm files

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ docs/Architecture diagram.vpp.bak_003d
 data/menuItem.txt
 data/mealReservation.txt
 data/flightBooking.txt
+docs/Architecture diagram.vux.bak
