--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,12 @@ test {
 
     testLogging {
         events "passed", "skipped", "failed"
-
+        systemProperty 'java.awt.headless', 'true'
+        systemProperty 'testfx.robot', 'glass'
+        systemProperty 'testfx.headless', 'true'
+        systemProperty 'prism.order', 'sw'
+        systemProperty 'prism.text', 't2k'
+        systemProperty 'testfx.setup.timeout', '2500'
         showExceptions true
         exceptionFormat "full"
         showCauses true
