--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,9 @@ test {
         showStandardStreams = false
     }
 
-    jvmArgs "-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.text=t2k -Dtestfx.setup.timeout=2500"
+    jvmArgs "-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.text=t2k " +
+            "-Dtestfx.setup.timeout=2500 export DISPLAY=:0.0 " +
+            "export DISPLAY=localhost:0.0"
 
     //tests below are excluded as an error occurs when they are run together with the other tests
     filter {
